objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Cadence Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>10%25</fullName>
        </values>
        <values>
            <fullName>100%25</fullName>
        </values>
        <values>
            <fullName>30%25</fullName>
        </values>
        <values>
            <fullName>65%25</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IP</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>10%25</fullName>
        </values>
        <values>
            <fullName>100%25</fullName>
        </values>
        <values>
            <fullName>30%25</fullName>
        </values>
        <values>
            <fullName>50%25</fullName>
        </values>
        <values>
            <fullName>65%25</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AD_Start__c</fullName>
        <label>AD Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AD_Total_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AD Total Time (hours)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASP_Discount_DMS__c</fullName>
        <description>straight from DMS (not authorization)</description>
        <label>ASP Discount DMS</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASP_Discount__c</fullName>
        <formula>MID( Authorization__c,
FIND(&quot;_&quot;, Authorization__c, FIND(&quot;_&quot;, Authorization__c, FIND(&quot;_&quot;, Authorization__c ) + 1) + 1) + 1,
FIND(&quot;_&quot;, Authorization__c, FIND(&quot;_&quot;, Authorization__c, FIND(&quot;_&quot;, Authorization__c, FIND(&quot;_&quot;, Authorization__c ) + 1) + 1) + 1) - FIND(&quot;_&quot;, Authorization__c, FIND(&quot;_&quot;, Authorization__c, FIND(&quot;_&quot;, Authorization__c ) + 1) + 1) - 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASP Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASP_Ratio_Proposed_Discount_ref__c</fullName>
        <formula>ASP_Ratio_SFDC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASP Ratio (Prop Disc)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASP_Ratio_SFDC__c</fullName>
        <inlineHelpText>ASP Ratio for Fast Track</inlineHelpText>
        <formula>IF(   New_SFDCOV__c  = &quot;New&quot;, (1- Proposed_Discount_DMS__c )/(1- ASP_Discount_DMS__c ), ASP_Ratio__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASP Ratio (Proposed Discount)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASP_Ratio_TCV__c</fullName>
        <formula>MIN(2,  ASP_Ratio_SFDC__c ) *  TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASP Ratio * TCV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASP_Ratio__c</fullName>
        <inlineHelpText>ASP Ratio Old</inlineHelpText>
        <label>ASP Ratio Old (Proposed Discount)</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASP_Version__c</fullName>
        <label>ASP Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATCV_DMS__c</fullName>
        <description>Inbound Field from DMS - Read Only to Users</description>
        <label>ATCV (DMS)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATCV__c</fullName>
        <label>ATCV (estimate)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AX_Name__c</fullName>
        <description>Person working on IP deals.</description>
        <label>AX Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RR_Lookup__c</fullName>
        <label>Account RR Lookup</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Spend__c</fullName>
        <label>Prior Runrate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apex_Context2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_context__c</fullName>
        <defaultValue>&apos;FALSE&apos;</defaultValue>
        <description>TRUE if DML is invoked from Apex (depends on whether it has been set to true from Apex)</description>
        <label>Apex_context</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_End_Date__c</fullName>
        <label>Deal Approval End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Failure_Reason__c</fullName>
        <label>Pre-approval Check</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Hierarchy_Status__c</fullName>
        <description>This field will be used to show the status of the Approval Hierarchy field for easy tracking.</description>
        <formula>IF(
ISBLANK( Approval_Hierarchy__c) ,
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;),
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)
)</formula>
        <label>Approval Hierarchy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Hierarchy</label>
        <referenceTo>Approval_Hierarchy__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Level_AsiaPac_RenMaint__c</fullName>
        <formula>IF( AND(  ISPICKVAL(Transaction_Type__c , &quot;Ren Maint&quot;), ISPICKVAL(Region__c , &quot;Asia Pacific&quot;), CCP__c = FALSE ),
CASE(
MAX(
IF( TCV__c &gt;= 1000000,1,0),
IF( AND( TCV__c &lt; 1000000,Proposed_Discount__c &gt; 0.50), 1,0)
),
0, &quot;Director&quot;,
1, &quot;Region&quot;,
2, &quot;HQ&quot;,
&quot;&quot;
),
&quot;&quot;
)</formula>
        <label>Approval Level AsiaPac RenMaint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level_AsiaPac_VAR__c</fullName>
        <formula>IF( AND( ISPICKVAL(Region__c , &quot;Asia Pacific&quot;), CCP__c, AsiaPac_VAR_TransType__c), 
CASE( 
MAX( 
IF( TCV__c &gt;= 1000,IF( Proposed_Discount__c &gt; 0.50, 1, 0),-1)
), 
-1, &quot;None&quot;,
0, &quot;CCP Manager&quot;, 
1, &quot;Region&quot;,  
&quot;&quot; 
), 
&quot;&quot; 
)</formula>
        <label>Approval Level AsiaPac VAR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level_IP_Tensilica__c</fullName>
        <formula>IF( ISPICKVAL(Transaction_Type__c , &quot;IP - Tensilica&quot;),
    CASE(
        IF( TCV__c &gt; 2000000, 2,
            IF( AND( TCV__c &gt; 50000, Proposed_Discount__c &gt; 0.70), 2,
                IF( Proposed_Discount__c &gt; 0.50, 1, 0)
            )
        ),
        0, &quot;Director&quot;,
        1, &quot;Region&quot;,
        2, &quot;HQ&quot;,
        &quot;&quot;
    ),
    &quot;&quot;
)</formula>
        <label>Approval Level IP Tensilica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level_IP__c</fullName>
        <formula>IF( ISPICKVAL(Transaction_Type__c , &quot;IP&quot;),
    CASE(
        MAX(
            IF( TCV__c &gt; 3000000, 2, IF( TCV__c &gt; 500000, 1, 0)),
            IF( AND( TCV__c &gt; 500000, TCV__c &lt;= 3000000, Proposed_Discount__c &gt; 0.50), 2,
            IF( AND( TCV__c &gt; 200000, TCV__c &lt;=  500000, Proposed_Discount__c &gt; 0.45), 2,
            IF( AND( TCV__c &gt;  50000, TCV__c &lt;=  200000, Proposed_Discount__c &gt; 0.40), 2,
            IF( AND( TCV__c &gt; 200000, TCV__c &lt;=  500000, Proposed_Discount__c &gt; 0.35), 1,
            IF( AND( TCV__c &lt;= 200000, Proposed_Discount__c &gt; 0.25), 1,0)))))
        ),
        0, &quot;Director&quot;,
        1, &quot;Region&quot;,
        2, &quot;HQ&quot;,
        &quot;&quot;
    ),
    &quot;&quot;
)</formula>
        <label>Approval Level IP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level_SAM__c</fullName>
        <formula>IF(CONTAINS(LEFT(TEXT(Transaction_Type__c),3),&quot;SAM&quot;),
    CASE( 
        MAX( 
            IF( TCV__c &gt; 3000000, 2, IF( TCV__c &gt; 500000, 1, 0)), 
            IF( AND( TCV__c &gt; 1000000, TCV__c &lt;= 3000000, Proposed_Discount__c &gt; 0.80), 2, 
                IF( AND( TCV__c &gt;   50000, TCV__c &lt;= 1000000, Proposed_Discount__c &gt; 0.70), 2, 
                    IF( AND( TCV__c &gt;  200000, TCV__c &lt;=  500000, Proposed_Discount__c &gt; 0.65), 1, 
                        IF( AND( TCV__c &lt;= 200000, Proposed_Discount__c &gt;
                            IF( ISPICKVAL(Transaction_Type__c, &quot;SAM - Jasper&quot;),0.10, 0.50)), 1, 0)
                    )
                )
            )
        ), 
        0, &quot;Director&quot;,
        1, &quot;Region&quot;, 
        2, &quot;HQ&quot;, 
        &quot;&quot; 
    ),
    &quot;&quot;
)</formula>
        <label>Approval Level SAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level_Services__c</fullName>
        <formula>IF(NOT(ISPICKVAL( Transaction_Type__c , &quot;Serv&quot;)),&quot;&quot;,
   CASE(
/* Hosted Design Services */
        IF(INCLUDES( Service_Type__c , &quot;Hosted Design Services&quot;),
            IF(OR(   TCV__c  &gt; 1000000, AND( TCV__c &gt; 50000,  Proposed_Discount__c  &gt; 0.80)), 2,
                IF( OR( TCV__c &gt; 500000, AND( TCV__c &gt; 200000, Proposed_Discount__c  &gt; 0.65), AND( TCV__c &lt;= 200000, Proposed_Discount__c  &gt; 0.50)),1,0)
            ),
/* Pre-funded Startup */
            IF(INCLUDES( Service_Type__c , &quot;Pre-funded Startup&quot;),
                IF( TCV__c  &gt; 200000, 2,
                                        /* Ticket 00497493 2016.12.09 */
                    /* IF( AND( ASP_Ratio__c &lt; 0.25,  Service_Margin__c &lt;= 0.30),1,0) */
                                        IF( AND( DQM_Proposed_Core_SW__c  &lt; 0.25,  Service_Margin__c &lt;= 0.30),1,0)
                ),
/* Any other Services */
                IF(OR( TCV__c &gt; 1000000, AND(TCV__c &gt; 250000, Service_Margin__c &lt; 0.45)), 2,
                    IF( OR(TCV__c &gt; 250000, Service_Margin__c &lt; 0.45),1,0)
                )
            )
        ),
   0, &quot;Director&quot;,
   1, &quot;Region&quot;,
   2, &quot;HQ&quot;,
   &quot;Error&quot;
   )
)
/* Old formula
CASE(
MAX(
IF(  TCV__c &gt; 1000000,2,IF( TCV__c &gt; 250000,1,0)),
IF( ISPICKVAL(Transaction_Type__c , &quot;Serv&quot;), IF( AND( TCV__c &gt; 250000, Service_Margin__c  &lt; 0.45), 2, 1),0)
),
1, &quot;Region&quot;,
2, &quot;HQ&quot;,
&quot;&quot;
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Level Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level_VIP__c</fullName>
        <formula>IF( ISPICKVAL(Transaction_Type__c , &quot;VIP&quot;),
CASE(
MAX( 
IF( TCV__c &gt; 3000000,2,IF( TCV__c &gt; 500000,1,0)), 
IF( AND(TCV__c &gt; 1000000,TCV__c &lt;= 3000000,Proposed_Discount__c &gt; 0.80), 2, 
IF( AND(TCV__c &gt; 50000,TCV__c &lt;=1000000,Proposed_Discount__c &gt; 0.70), 2,
IF( AND(TCV__c &gt; 200000,TCV__c &lt;= 500000,Proposed_Discount__c &gt; 0.65), 1, 
IF( AND(TCV__c &lt;=200000,Proposed_Discount__c &gt; 0.50), 1,0))))
),
0, &quot;Director&quot;,
1, &quot;Region&quot;,
2, &quot;HQ&quot;,
&quot;&quot;
),
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Level VIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <description>Highest approval level needed for core software. From DMS as first field in Authorization.</description>
        <formula>IF(
/*  AND(
    NOT(ISBLANK(Region_Recommended_ASP_Ratio_SFDC__c)),
*/
    OR(
      AND(TCV__c &gt;= 500000,
          Region_Recommended_ASP_Ratio_SFDC__c &lt; 0.8 ),
      Region_Recommended_ASP_Ratio_SFDC__c &lt; 0.5
    )
/*  )
*/
,
  &quot;HQ&quot;,
  TRIM(LEFT( Authorization__c, FIND( &quot;_&quot; , Authorization__c) - 1))
)




/*  kamta_05_sep_12:commenting current formula and added the modified formula given by mike
        LEFT( Authorization__c, FIND( &quot;_&quot; , Authorization__c) - 1)  
 Added TRIM to account for trailing space on some HQ values coming from DMS 
Mike Rennich - 2012.08.30 */ 
/* TRIM(LEFT( Authorization__c, FIND( &quot;_&quot; , Authorization__c) - 1)) */</formula>
        <label>Approval Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Start_Date__c</fullName>
        <label>Deal Approval Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status_DQM__c</fullName>
        <label>Approval Status DQM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Threshold_Reason__c</fullName>
        <label>Approval Threshold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Total_Time__c</fullName>
        <formula>24*(Approval_End_Date__c - Approval_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Approval Total Time (hours)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <description>This field will be used to allow users to select the approval type they wish to have the record entered into. This will not be dependent on the approval process and will allow users to select which approval they want at any time.</description>
        <label>Approval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_AD_All_DQM__c</fullName>
        <inlineHelpText>Core SW, DSG, CIC, SPB, SVG SW, Core SW w/o Loans</inlineHelpText>
        <label>Approved AD All DQM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_AD_CIC_DQM__c</fullName>
        <label>Approved AD CIC DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_AD_Core_SW_DQM__c</fullName>
        <label>Approved AD Core SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_AD_Core_SW_w_o_Loans_DQM__c</fullName>
        <label>Approved AD Core SW w/o Loans DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_AD_DSG_DQM__c</fullName>
        <label>Approved AD DSG DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_AD_SPB_DQM__c</fullName>
        <label>Approved AD SPB DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_AD_SVG_SW_DQM__c</fullName>
        <label>Approved AD SVG SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Discount_Director__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The last discount that the Director has approved</description>
        <label>Approved Discount - Director</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Discount_HQ_Admin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Last discount approved by HQ Admin</description>
        <label>Approved Discount - HQ Admin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Discount_HQ__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Last discount approved by HQ</description>
        <label>Approved Discount - HQ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Discount_Region__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Last discount approve by Region</description>
        <label>Approved Discount - Region</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Discount_VP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Last discount approved by VP</description>
        <label>Approved Discount - VP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Admin_All_DQM__c</fullName>
        <inlineHelpText>Core SW, DSG, CIC, SPB, SVG SW, Core SW w/o Loans</inlineHelpText>
        <label>Approved HQ Admin All DQM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Admin_CIC_DQM__c</fullName>
        <label>Approved HQ Admin CIC DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Admin_Core_SW_DQM__c</fullName>
        <label>Approved HQ Admin Core SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Admin_Core_SW_w_o_Loans_DQM__c</fullName>
        <label>Approved HQ Admin Core SW w/o Loans DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Admin_DSG_DQM__c</fullName>
        <label>Approved HQ Admin DSG DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Admin_SPB_DQM__c</fullName>
        <label>Approved HQ Admin SPB DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Admin_SVG_SW_DQM__c</fullName>
        <label>Approved HQ Admin SVG SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_All_DQM__c</fullName>
        <inlineHelpText>Core SW, DSG, CIC, SPB, SVG SW, Core SW w/o Loans</inlineHelpText>
        <label>Approved HQ All DQM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_CIC_DQM__c</fullName>
        <label>Approved HQ CIC DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Core_SW_DQM__c</fullName>
        <label>Approved HQ Core SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_Core_SW_w_o_Loans_DQM__c</fullName>
        <label>Approved HQ Core SW w/o Loans DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_DSG_DQM__c</fullName>
        <label>Approved HQ DSG DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_SPB_DQM__c</fullName>
        <label>Approved HQ SPB DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_HQ_SVG_SW_DQM__c</fullName>
        <label>Approved HQ SVG SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_RVP_All_DQM__c</fullName>
        <inlineHelpText>Core SW, DSG, CIC, SPB, SVG SW, Core SW w/o Loans</inlineHelpText>
        <label>Approved RVP All DQM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_RVP_CIC_DQM__c</fullName>
        <label>Approved RVP CIC DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_RVP_Core_SW_DQM__c</fullName>
        <label>Approved RVP Core SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_RVP_Core_SW_w_o_Loans_DQM__c</fullName>
        <label>Approved RVP Core SW w/o Loans DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_RVP_DSG_DQM__c</fullName>
        <label>Approved RVP DSG DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_RVP_SPB_DQM__c</fullName>
        <label>Approved RVP SPB DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_RVP_SVG_SW_DQM__c</fullName>
        <label>Approved RVP SVG SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_VP_All_DQM__c</fullName>
        <inlineHelpText>Core SW, DSG, CIC, SPB, SVG SW, Core SW w/o Loans</inlineHelpText>
        <label>Approved VP All DQM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_VP_CIC_DQM__c</fullName>
        <label>Approved VP CIC DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_VP_Core_SW_DQM__c</fullName>
        <label>Approved VP Core SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_VP_Core_SW_w_o_Loans_DQM__c</fullName>
        <label>Approved VP Core SW w/o Loans DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_VP_DSG_DQM__c</fullName>
        <label>Approved VP DSG DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_VP_SPB_DQM__c</fullName>
        <label>Approved VP SPB DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_VP_SVG_SW_DQM__c</fullName>
        <label>Approved VP SVG SW DQM</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approving_AD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving AD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_HQ_Orig2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving HQ Orig</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesrHgG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_HQ_SF_Orig2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving HQ SF Orig</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesrHgV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_HQ_SF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving HQ SF</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_HQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving HQ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_RSF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving RSF</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving RVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_SF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving SF</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AsiaPac_VAR_TransType__c</fullName>
        <formula>OR( 
ISPICKVAL(Transaction_Type__c, &quot;eDAgold&quot;), 
ISPICKVAL(Transaction_Type__c, &quot;eDAplat&quot;), 
ISPICKVAL(Transaction_Type__c, &quot;FTA-Add-on&quot;), 
ISPICKVAL(Transaction_Type__c, &quot;FTA-New&quot;), 
ISPICKVAL(Transaction_Type__c, &quot;SUB&quot;), 
ISPICKVAL(Transaction_Type__c, &quot;SUB Add-on&quot;), 
ISPICKVAL(Transaction_Type__c, &quot;99-YR/Other&quot;), 
ISPICKVAL(Transaction_Type__c, &quot;TBL&quot;),
ISPICKVAL(Transaction_Type__c, &quot;Ren Maint&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AsiaPac VAR TransType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_ASP_Ratio__c</fullName>
        <formula>(1- IF( New_SFDCOV__c =&quot;New&quot;, Authorized_Deal_Discount_SFDC__c ,Authorized_Deal_Discount__c ))/((1- Proposed_Discount_DMS__c )/   IF( New_SFDCOV__c =&quot;New&quot;,  ASP_Ratio_SFDC__c ,ASP_Ratio__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorized ASP Ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorized_Deal_Discount2__c</fullName>
        <formula>Authorized_Deal_Discount_SFDC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorized Deal Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Authorized_Deal_Discount_SFDC__c</fullName>
        <description>need to change datevalue for SFDC OV start to q1Y2014 date</description>
        <formula>/*

IF(New_SFDCOV__c = &quot;New&quot;,IF( HQ_Authorized_Discount__c &gt;0, HQ_Authorized_Discount__c ,1-(1- ASP_Discount_DMS__c )*IF( TCV_P_AND_M__c &gt;=500000,MAX(IF(Approval_Level__c=&quot;HQ&quot;,0,0.8),IF(Region_Recommended_ASP_Ratio_SFDC__c&gt;0,Region_Recommended_ASP_Ratio_SFDC__c,max(IF(New_SFDCOV__c = &quot;New&quot;,0.8,0.8)* Prior_ASP_Ratio__c ,Default_Region_FM_DMS__c))),MAX(IF(Approval_Level__c=&quot;HQ&quot;,0,0.5),IF(Region_Recommended_ASP_Ratio_SFDC__c &gt;0, Region_Recommended_ASP_Ratio_SFDC__c , Default_Region_FM_DMS__c )))),Authorized_Deal_Discount__c)

*/

/*

IF(New_SFDCOV__c = &quot;New&quot;,IF( HQ_Authorized_Discount__c &gt;0, HQ_Authorized_Discount__c ,1-(1- ASP_Discount_DMS__c )*IF( TCV__c &gt;=500000,MAX(IF(Approval_Level__c=&quot;HQ&quot;,0,0.8),IF(Region_Recommended_ASP_Ratio_SFDC__c&gt;0,Region_Recommended_ASP_Ratio_SFDC__c,max(0.8 * Prior_ASP_Ratio__c ,Default_Region_FM_DMS__c))),MAX(IF(Approval_Level__c=&quot;HQ&quot;,0,0.5),IF(Region_Recommended_ASP_Ratio_SFDC__c &gt;0, Region_Recommended_ASP_Ratio_SFDC__c , Default_Region_FM_DMS__c )))),Authorized_Deal_Discount__c)

*/

IF(New_SFDCOV__c = &quot;New&quot;,
    IF( HQ_Authorized_Discount__c &gt;0, 
        HQ_Authorized_Discount__c ,
        1-(1- ASP_Discount_DMS__c )* 
                MAX(IF(Approval_Level__c=&quot;HQ&quot;,0,IF(TCV__c &gt;= 500000,0.8,0.5)),
                    IF(Region_Recommended_ASP_Ratio_SFDC__c&gt;0,
                        Region_Recommended_ASP_Ratio_SFDC__c,
                        max(IF(TCV__c &gt;= 500000, 0.8 * Prior_ASP_Ratio__c ,0),
                            Default_Region_FM_DMS__c
                        )
                    )
                )
        ),
    Authorized_Deal_Discount__c
)</formula>
        <label>Authorized Deal Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Authorized_Deal_Discount__c</fullName>
        <label>Authorized Deal Discount Old</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Baseband_Chip_Rate__c</fullName>
        <label>Baseband Chip Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseband_Core_Royalty_Rate_Basis__c</fullName>
        <label>Baseband Core Royalty Rate Basis</label>
        <picklist>
            <picklistValues>
                <fullName>ASP %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Chip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Core</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Baseband_Core__c</fullName>
        <label>Baseband Core</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Case__c</fullName>
        <label>Best Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Plan__c</fullName>
        <label>Billing Plan</label>
        <picklist>
            <picklistValues>
                <fullName>100% Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others/Non-Standard - Front End Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others/Non-Standard - Back End Loaded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biz_Model_Term_Check_SFDC__c</fullName>
        <formula>IF( New_SFDCOV__c =&quot;New&quot;,(IF( Order_Type_DMS__c &lt;&gt;&quot;1-SW&quot;,&quot;&quot;,IF(AND(Term_Months_DMS__c&gt;=  Minimum_Term_Final__c  -0.01, Text(DMS_Approval_Input_SFDC__c)&lt;&gt;&quot;Not approved&quot;, Term_Months_DMS__c&lt;0.01+ Maximum_Term_Final__c ),&quot;Pass&quot;,&quot;Fail Term&quot;))), Biz_Model_Term_Check__c )</formula>
        <label>Biz Model &amp; Term Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biz_Model_Term_Check__c</fullName>
        <inlineHelpText>Old</inlineHelpText>
        <label>Biz Model &amp; Term Check Old</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>